# zmb-context

./: .cursorrules  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: ROADMAP.md  index.html  style.css
tests/: test_analyzer.py  test_cursor_rules.py
zmb/: core.py  memory.py  state.py
zmb/context_architect/: analyzer.py  cli.py  cursor_rules.py  generator.py  scanner.py
zmb/dashboard/: app.py
zmb/dashboard/templates/: dashboard.html
zmb/tools/: file_ops.py
