[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zmb-context"
version = "0.2.2"
description = "Context Architect: CLI for AI Coding Context"
authors = [
  { name="ZMB AI Supervisor", email="zmb@example.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pathspec",
    "rich",
]

[project.urls]
"Homepage" = "https://github.com/ADevBelgie/ZMB-Prototype"
"Bug Tracker" = "https://github.com/ADevBelgie/ZMB-Prototype/issues"

[project.scripts]
context-architect = "zmb.context_architect.cli:main"
zmb-kernel = "zmb.core:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zmb*"]
